--- a/templates/web/pormibarrio/header.html
+++ b/templates/web/pormibarrio/header.html
@@ -14,14 +14,27 @@
         <meta name="mobileoptimized" content="0">
 
         <meta property="og:url" content="[% c.cobrand.base_url %][% c.req.uri.path %]">
-        <meta property="og:title" content="[% title || 'PorMiBarrio' %]">
+        <meta property="og:title" content="PorMiBarrio [% title || '' %]">
         <meta property="og:site_name" content="[% c.cobrand.site_title %]">
-        [% IF c.req.uri.path == '/' %]<meta property="og:description" content="Report, view, and discuss local street-related problems.">[% END %]
+        <meta property="og:description" content="Por Mi Barrio es una aplicación web creada por DATA que te permite hacer reclamos sobre tu ciudad, ingrsándolos directamente al Sistema Único de Reclamos de la Intendencia de Montevideo.">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="[% c.cobrand.base_url %]/cobrands/fixmystreet/fms-og_image.png">
+        <meta property="og:image" content="[% c.cobrand.base_url %]/cobrands/pormibarrio/images/pormibarrio.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="500">
         <meta property="og:image:height" content="500">
+
+        <!-- Schema.org markup for Google+ --> 
+        <meta itemprop="name" content="Por Mi Barrio"> 
+        <meta itemprop="description" content="Por Mi Barrio es una aplicación web creada por DATA que te permite hacer reclamos sobre tu ciudad, ingrsándolos directamente al Sistema Único de Reclamos de la Intendencia de Montevideo.">
+        <!--<meta itemprop="image" content="[% c.cobrand.base_url %]/cobrands/pormibarrio/images/pormibarrio.png">-->
+
+        <!-- Twitter Card data --> 
+        <meta name="twitter:card" content="summary_large_image"> 
+        <meta name="twitter:site" content="@DATAuy"> 
+        <meta name="twitter:title" content="Por Mi Barrio"> 
+        <meta name="twitter:description" content="Por Mi Barrio es una aplicación web creada por DATA que te permite hacer reclamos sobre tu ciudad, ingrsándolos directamente al Sistema Único de Reclamos de la Intendencia de Montevideo."> 
+        <meta name="twitter:creator" content="@DATAuy">
+        <!-- Twitter summary card with large image must be at least 280x150px -->
 
 [% SET start = c.config.ADMIN_BASE_URL IF admin %]
 
@@ -36,10 +49,6 @@
         <script src="[% start %][% version('/cobrands/fixmystreet/position_map.js') %]" charset="utf-8"></script>
         [% INCLUDE 'common_header_tags.html', js_override = '/cobrands/fixmystreet/fixmystreet.js', site_title = c.cobrand.site_title %]
         [% extra_js %]
-                
-        [% IF c.req.uri.host == 'osm.fixmystreet.com' %]
-            <link rel="canonical" href="http://www.fixmystreet.com[% c.req.uri.path_query %]">
-        [% END %]
 
         [% INCLUDE 'tracking_code.html' %]
 
@@ -114,9 +123,9 @@
                     <li class="reportar"><a href="javascript:void(0);" onclick="geolocate(10000, 4)">Reportar</a></li>
                     <li class="reportes"><a href="javascript:void(0);" onclick="geolocate(10000, 2)">Reportes</a></li>
                     <li class="help"><a href="http://datauy.uservoice.com/forums/233161-por-mi-barrio" target="_blank">Ayuda</a></li>
+                    <li class="doc-info"><a href="/faq">Preguntas</a></li>
                 </ul>
                 <ul class="help-info">
-                    <li class="doc-info"><a href="/faq">FAQ</a></li>
                     <li class="data"><a href="http://datauy.org" target="_blank"></a></li>
                     <li class="my-society"><a href="http://mysociety.org" target="_blank"></a></li>
                     <li class="avina"><a href="http://www.avinaamericas.org/" target="_blank"></a></li>
