--- a/templates/web/pormibarrio/report/display.html
+++ b/templates/web/pormibarrio/report/display.html
@@ -2,10 +2,10 @@
     PROCESS "report/photo-js.html";
     PROCESS "maps/${map.type}.html";
 
-    problem_title = problem.title_safe _ ' - ' _ loc('Viewing a problem');
+    problem_title = 'Problema: ' _ problem.title_safe;
     INCLUDE 'header.html'
         title = problem_title
-        rss = [ loc('Updates to this problem, FixMyStreet'), "/rss/$problem.id" ]
+        rss = [ 'Actualizaciones de este problema, PorMiBarrio', "/rss/$problem.id" ]
         robots = 'index, nofollow'
         bodyclass = 'mappage'
         containerclass = 'problem-container';
