--- a/templates/web/pormibarrio/report/_main.html
+++ b/templates/web/pormibarrio/report/_main.html
@@ -23,7 +23,7 @@
     <h4>Estado del reporte</h4>
     <span class="status-report-im">Su reclamo en la IM: 
     	[% IF problem.can_display_external_id %] 
-    		<a href="http://www.montevideo.gub.uy/tramites/aplicacion/consulta-de-reclamos?numReclamo=[% problem.can_display_external_id | html %]" > [% problem.can_display_external_id | html %] </a>
+    		<a target="_blank" href="http://www.montevideo.gub.uy/tramites/aplicacion/consulta-de-reclamos?numReclamo=[% problem.can_display_external_id | html %]" > [% problem.can_display_external_id | html %] </a>
     	[% ELSE %]
     		No hemos podido ingresar el reclamo aún
     	[% END %]
