--- a/web/cobrands/pormibarrio/main.css
+++ b/web/cobrands/pormibarrio/main.css
@@ -52,6 +52,10 @@ a.btn, a.btn:visited{
 	padding: 20px 39px 20px 120px;
 }
 
+body.mappage .content-horizontal{
+	padding: 0;
+}
+
 div#fms_pan_zoom.pan-horizontal div{
 	top: 6.75em !important;
 }
