--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -75,7 +75,7 @@
                     [% IF js %]
                         <div id="form_category_row">
                             <label for="form_category">[% loc('Category') %] *</label>
-                            <select name="category" id="form_category" required><option>[% loc('Loading...') %]</option></select>
+                            <select name="category" id="form_category" required><option>Haga click en el mapa...</option></select>
                         </div>
                     [% ELSE %]
             			[% IF category_options.size %]
