Cambios en interacción de botones y en registro

--- a/templates/web/pormibarrio/around/tabbed_lists.html
+++ b/templates/web/pormibarrio/around/tabbed_lists.html
@@ -3,6 +3,9 @@
 	<!--Intro reports-->
     <div id="top-reports" class="ir">
         <div class="c-t">
+            <div class='full-wide'>
+                <a class="btn btn-back reports-back" href="#">Volver</a>
+            </div>
             <h2>Reportes</h2>
             <p>Aquí encontrará problemas en su zona o en la zona que desee reportar o chequear. <b>Para hacer el reporte sólo debe hacer click en el mapa en el lugar donde se encuentra el problema.</b></p>
         </div>
