--- a/web/cobrands/pormibarrio/main.css
+++ b/web/cobrands/pormibarrio/main.css
@@ -24,15 +24,16 @@ body{
 body.fullwidthpage{
 	width: 100%;
 	background: url("images/bg/pmb-mapa-sp.png") no-repeat scroll center top / cover rgba(0, 0, 0, 0);
-	color: white;
 }
+
 a, button, div.it-r {
 	-webkit-transition: all .3s ease;
 	-moz-transition: all .3s ease;
 	transition: all .3s ease;
 }
+
 a.btn, a.btn:visited{
-	color: white;
+	/*color: white;*/
 }
 
 * {
@@ -59,6 +60,27 @@ a.btn, a.btn:visited{
 	background: rgba(0, 0, 0, 0.9);
 	text-align: center;
 	padding-top: 120px;
+}
+
+.full-wide{
+	width: 100%;
+	float: left;
+}
+
+a.report-back{
+	display: none;
+}
+
+a.reports-back{
+	display: none;
+}
+
+.content-vertical a.report-back{
+	display: block;
+}
+
+.content-vertical a.reports-back{
+	display: block;
 }
 
 body.intro .container{
@@ -457,7 +479,8 @@ div.r-icon{
 }
 
 div.it-r-info{
-	float:left	
+	float:left;
+	max-width: 78%;
 }
 
 div.it-r h3{
@@ -616,6 +639,23 @@ div.report-medium{
 
 div.image-report{
 	position:relative	
+}
+
+a.btn-back{
+	float: right;
+	right:30px;
+	top:20px;
+	font-weight:600;
+	text-transform:uppercase;
+	color:#fff;
+	font-size:0.875em;
+	background:rgba(0,0,0,0.3);
+	padding:2px 10px	
+}
+
+a.registrate-back:hover{
+	background:rgba(0,0,0,0.5);
+	text-decoration:none
 }
 
 a.btn-close-report{
@@ -995,7 +1035,8 @@ div.c-form-report div.ir{
 }
 
 .form-group{
-	margin-bottom:30px;	
+	margin-bottom:30px;
+	border-bottom: #223241 solid 1px;
 }
 
 .form-group label{
@@ -1065,6 +1106,12 @@ div.drag span{
 .help-block{
 	font-size:0.875em;
 	color:#758a9d;	
+}
+
+.form-group input.form-error, .form-group input.form-error:focus,
+.form-group input.error, .form-group input.error:focus {
+    border-color: #fc4349 !important;
+    color: #fc4349 !important;
 }
 
 /*BUTTONS----------------------------------------------------------*/
@@ -1218,11 +1265,11 @@ div.login div.ir{
 	margin-top:20px;
 	padding:15px 0;
 	border-top:#223241 solid 1px;
-	/*text-align:center	*/
+	text-align:center;
 }
 
 div.bloque-registro{
-	/*display:none;	*/
+	display:none;
 }
 
 div.checkbox-group input{
