Added user profile picture

--- a/templates/web/pormibarrio/auth/social_signup.html
+++ b/templates/web/pormibarrio/auth/social_signup.html
@@ -8,6 +8,7 @@
         <input type="hidden" name="r" value="[% c.req.params.r | html %]">
         <input type="hidden" name="facebook_id" value="[% user.facebook_id | html %]">
         <input type="hidden" name="twitter_id" value="[% user.twitter_id | html %]">
+        <input type="hidden" name="picture_url" value="[% user.picture_url | html %]">
         <div id="form_sign_in">
 			<div class="form-box">
 				<label for="name">[% loc('Name') %] *</label>
