--- a/templates/web/pormibarrio/report/update-form.html
+++ b/templates/web/pormibarrio/report/update-form.html
@@ -60,62 +60,68 @@
 			[% END %]
 		</div>
 		<textarea rows=4 name="update" id="form_update" placeholder="Escriba aquí su comentario *" class="[% IF field_errors.update %] error [% END %] required">[% update.text | html %]</textarea>
-
 		<!--Sign In-->
-		[% IF !c.user_exists %]
+	[% IF c.user_exists %]
+		<input class="btn btn-sky btn-small btn-comentar" type="submit" id="update_post" value="Comentar">
+	</div>
+	[% ELSE %]
+		<button class="btn btn-sky btn-small btn-comentar btn-disabled" disabled="disabled" type="submit">Comentar</button>
+	</div>
 		<div class="login">
-			<div class="bloque-sesion new-report">
-				<div class="ir">
-					<h2>Accede a tu cuenta</h2>
-					<p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
-				</div>
-				[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
-				<div class="social-buttons">
-					[% IF c.config.FACEBOOK_APP_ID %]
-						<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in" class="btn btn-block btn-social btn-facebook">Registrate con Facebook</button>
-					[% END %]
-					[% IF c.config.TWITTER_KEY %]
-						<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in" class="btn btn-block btn-social btn-twitter">Registrate con Twitter</button>
-					[% END %]
-				</div>
-				<p>...ó ingresa los datos si ya tienes cuenta:</p>
-				[% END %]
-				
-				<!--login con password-->
-				<div class="form-group">				
-					<input class="form-control [% IF field_errors.password %] error [% END %]" type="password" name="password_sign_in" id="password_sign_in" value="" placeholder="[% loc('Your password') %]">
-					<input class="green-btn" type="submit" name="submit_sign_in" id="submit_sign_in" value="INGRESAR">
-				</div>
-				<!--/login con password-->
+    			<div class="bloque-sesion">
+    				<div class="ir" id="report-new-login">
+    					<h2>Accede a tu cuenta</h2>
+    					<p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
+    				</div>
+                    <div class="checkbox-group">
+                        <input type="checkbox" name="may_show_name_social" id="form_may_show_name_social" value="1"[% ' checked' IF report.anonymous==0 OR (c.cobrand.default_show_name AND report.anonymous=='') %]>
+                        <label class="inline" for="form_may_show_name_social">[% loc('Show my name publicly') %] </label>
+                    </div>
+    				[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
+    					<div class="social-buttons">
+    						[% IF c.config.FACEBOOK_APP_ID %]
+    							<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in" class="btn btn-block btn-social btn-facebook">Registrate con Facebook</button>
+    						[% END %]
+    						[% IF c.config.TWITTER_KEY %]
+    							<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in" class="btn btn-block btn-social btn-twitter">Registrate con Twitter</button>
+    						[% END %]
+    					</div>
+    				[% END %]
+    				<p>...ó ingresa los datos si ya tienes cuenta:</p>
+                    <div class="checkbox-group">
+                        <input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
+                        <label class="n inline" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
+                    </div>
+    				<div class="form-group">
+    					<input type="password" class="form-control [% IF field_errors.password %] error [% END %]" name="password_sign_in" id="password_sign_in" placeholder="Contraseña" value="">
 
-				<p class="no-account">
-					¿No utilizas redes sociales? No hay problema!
-					<br>
-					<a class="green registrate" href="/auth">Regístrate aquí con tu mail</a>
-				</p>
-			</div> <!-- bloque-sesion -->
-			<div class="bloque-registro">
-	            <div class="ir">
-	                <h2>Regístrate y se parte</h2>
-	                <p>Crea una cuenta en PorMiBarrio y comienza a colaborar.</p>
-	            </div>
-	            <div class="form-group">
-	                [% INCLUDE 'report/new/extra_name.html' %]                                
-	                <input type="text" placeholder="Cédula de Identidad: 0.000.000-0" class="form-control form-focus-trigger [% IF field_errors.identity_document %] error [% END %]" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" >
-	                <input class="form-control" type="text" value="[% report.user.phone | html %]" name="phone" id="form_phone" placeholder="Teléfono (opcional)">              
-	                <input name="password_register" id="password_register" type="password" placeholder="Contraseña" class="form-control [% IF field_errors.password %] error [% END %]">
-	            </div>
-	            <div class="form-group">
-	                <button class="btn btn-block btn-green" type="submit" id="submit_register" name="submit_register">Regístrate y publica</button>
-	            </div>
-	        </div>
-		</div> <!-- Sign In -->
-		[% END %]
-
-		[% IF c.user_exists %]
-			<input class="btn btn-sky btn-small btn-comentar" type="submit" id="update_post" value="Comentar">
-		[% ELSE %]
-			<button class="btn btn-sky btn-small btn-comentar btn-disabled" disabled="disabled" type="submit">Comentar</button>
+                        <input class="btn btn-block btn-reportar" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
+                        <p class="no-account">
+                            ¿No utilizas redes sociales? No hay problema!<br>
+                            <a class="green registrate" href="#">Regístrate aquí con tu mail</a>
+                        </p>
+    				</div>
+    			</div> <!-- bloque-sesion -->
+                <div class="bloque-registro">
+                    <div class='full-wide'>
+                        <a class="btn btn-back registrate-back" href="#">Volver</a>
+                    </div>
+                    <div class="ir">
+                        <h2>Regístrate y se parte</h2>
+                        <p>Crea una cuenta en PorMiBarrio y comienza a colaborar.</p>
+                    </div>
+                    <div class="form-group">
+                        [% INCLUDE 'report/new/extra_name.html' %]
+                        <input type="text" placeholder="Nombre y apellido" class="form-focus-trigger validName form-control [% IF field_errors.name %] error [% END %]" value="[% report.name | html %]" name="name" id="form_name" >                                
+                        <input type="text" placeholder="Cédula de Identidad: 0.000.000-0" class="form-control form-focus-trigger [% IF field_errors.identity_document %] error [% END %]" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" >
+                        <input class="form-control" type="text" value="[% report.user.phone | html %]" name="phone" id="form_phone" placeholder="Teléfono (opcional)">              
+                        <input name="password_register" id="password_register" type="password" placeholder="Contraseña" class="form-control [% IF field_errors.password %] error [% END %]">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-block btn-green" type="submit" id="submit_register" name="submit_register">Regístrate y publica</button>
+                    </div>
+                </div>
+			</div> <!-- Sign In -->
 		[% END %]
 	</form>
 [% END %]
