--- a/templates/web/pormibarrio/auth/social_signup.html
+++ b/templates/web/pormibarrio/auth/social_signup.html
@@ -17,7 +17,7 @@
 				[% END %]
 				<input type="text" name="name" value="[% user.name | html %]" placeholder="[% loc('Your name') %]" required>
 				
-				<label class="n" for="email">[% loc('Email') %] *</label>
+				<label for="email">[% loc('Email') %] *</label>
 				[% IF field_errors.email  %]
 					<div class="form-error">[% field_errors.email %]</div>
 				[% END %]
@@ -28,6 +28,12 @@
 					<div class="form-error">[% field_errors.identity_document %]</div>
 				[% END %]
 				<input type="text" name="identity_document" value="[% user.identity_document | html %]" placeholder="[% loc('For example: 1.234.567-8') %]">
+
+				<label for="password">[% loc('Password') %] *</label>
+				[% IF field_errors.password  %]
+					<div class="form-error">[% field_errors.password %]</div>
+				[% END %]
+				<input type="password" name="password" value="" placeholder="[% loc('Your password') %]">
 				
 				<div class="form-txt-submit-box">
 					<input class="green-btn" type="submit" name="sign_in" value="[% loc('Sign in') %]">
